<resources>
    <string name="app_name">memo</string>
    <string name="str_ui_mode_changed_info">화면 스타일이 변경되어 앱 재실행 합니다.</string>

    <string name="str_id">아이디</string>
    <string name="require_id">아이디 입력</string>
    <string name="str_pw">비밀번호</string>
    <string name="require_pw">비밀번호 입력</string>
    <string name="id_error_info">특수문자는 사용할 수 없습니다.</string>
    <string name="str_login">로그인</string>
    <string name="str_non_login">비 로그인</string>
    <string name="str_login_request">로그인 하세요.</string>
    <string name="fmt_hello_user">안녕하세요. %s</string>

    <string name="str_title">제목</string>
    <string name="str_contents">내용</string>
    <string name="str_change">수정</string>
    <string name="str_add">추가</string>
    <string name="str_add_photo">사진 추가</string>
    <string name="str_summit">전송</string>
    <string name="str_info_file_max_cnt">더이상 추가할수 없습니다.</string>
    <string name="str_memo_img_delete">정말로 이 파일을 삭제 하시겠습니까?</string>

    <string name="str_confirm">확인</string>
    <string name="str_cancel">취소</string>
    <string name="str_permission_denied">권한 동의해주세요.</string>
    <string name="str_gallery_all">전체 보기</string>

    <string name="large_text">
        MIT License
        Copyright © 2019 Sieun Ju
        Permission is hereby granted, free of charge, to any person obtaining a copy
        of this software and associated documentation files (the "Software"), to deal
        in the Software without restriction, including without limitation the rights
        to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
        copies of the Software, and to permit persons to whom the Software is
        furnished to do so, subject to the following conditions:

        The above copyright notice and this permission notice shall be included in all
        copies or substantial portions of the Software.
        HM ♥ MJ

        THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
        IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
        FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
        AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
        LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
        OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
        SOFTWARE.
    </string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="test_img">IMG_1595897676051afk1j1b40cc.jpeg</string>

    <string name="toolbar_home">홈</string>
    <string name="toolbar_search">검색</string>
    <string name="toolbar_add">추가</string>
    <string name="toolbar_more">더보기</string>
    <string name="ellipsis">&#8230;</string>

    <string name="radio_red">빨강</string>
    <string name="radio_orange">주황</string>
    <string name="radio_yellow">노랑</string>
    <string name="radio_green">초록</string>
    <string name="radio_blue">파랑</string>
    <string name="radio_purple">보라</string>
    <string name="radio_gray">기타</string>

    <string name="str_clipboard_copy">복사 완료했습니다.</string>
    <string name="str_back_press_info">\'뒤로\'버튼을 한번 더 누르시면 종료됩니다.</string>
    <string name="str_guid_limit_img_file_over">이미지 파일을 더는 추가 할 수 없습니다.\n추가된 이미지를 삭제하시길 바랍니다.</string>
    <string name="memo_detail_more_add_photo">사진 추가</string>
    <string name="memo_detail_more_delete">메모 삭제</string>
    <string name="memo_delete_guide">정말 삭제 하시겠습니까?</string>

    <string name="str_left_tag">왼쪽 이미지</string>
    <string name="str_left_root_tag">왼쪽 레이아웃</string>
    <string name="str_right_tag">오른쪽 이미지</string>
    <string name="str_right_root_tag">오른쪽 레이아웃</string>
    <string name="title_activity_image_detail">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- Firebase Messaging -->
    <string name="notification_channel_id">memo_channel_id</string>
    <string name="notification_channel_name">푸시 알림</string>
    <string name="notification_channel_description">푸시 알림 입니다.</string>

    <string name="str_memo_empty_info">추가된 메모가 없습니다.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
