<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.hmju.memo.viewModels.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:layout_marginLeft="@dimen/margin_size_20"
            android:layout_marginRight="@dimen/margin_size_20"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <!-- 아이디 -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/require_id"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:errorEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:maxLines="1"
                    android:maxLength="10"
                    android:text="@={viewModel.strId}"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- 비밀번호 -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:hint="@string/require_pw"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@={viewModel.strPw}"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- 자동 로그인 여부 -->
            <com.google.android.material.checkbox.MaterialCheckBox
                android:layout_width="wrap_content"
                android:text="@string/auto_login"
                app:buttonTint="@color/colorPrimary"
                android:checked="@{viewModel.isAuto}"
                android:textColor="@color/colorBlack"
                android:layout_height="wrap_content"/>

            <!-- 로그인 버튼 -->
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:paddingTop="@dimen/padding_size_13"
                android:paddingBottom="@dimen/padding_size_13"
                android:onClick="@{()->viewModel.startLogin()}"
                android:text="@string/str_login"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>